cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH
${CMAKE_MODULE_PATH}
${CMAKE_CURRENT_SOURCE_DIR}/CMakeFinds
)

find_package(OGRE 1.7.3 REQUIRED)
find_package(Newton REQUIRED)


SET(MCONVERT_INCLUDE_DIRS
	${Ogre_INCLUDE_DIRS}
	${Newton_INCLUDE_DIR}
	/usr/local/include/OGRE
	/usr/include/OGRE
)



SET(MCONVERT_LIBRARIES
	${OGRE_LIBRARIES}
	${Newton_LIBRARIES}
)

#SET(MCONVERT_BINARY ${CMAKE_CURRENT_SOURCE_DIR}/Debug/MConvert)
SET(MCONVERT_BINARY MConvert)
MESSAGE("Checking for sources: " ${CMAKE_CURRENT_SOURCE_DIR}/MConvert)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MCONVERT_SOURCES)
MESSAGE("Sources: ")
foreach(s ${MCONVERT_SOURCES}) 
     message("	" ${s}) 
endforeach(s)
MESSAGE("Libs: ")
foreach(s ${MCONVERT_LIBRARIES}) 
     message("	" ${s}) 
endforeach(s)

ADD_EXECUTABLE(${MCONVERT_BINARY} ${MCONVERT_SOURCES})
#LINK_DIRECTORIES(${POLYSOUBR_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(${MCONVERT_BINARY} ${MCONVERT_LIBRARIES})
INCLUDE_DIRECTORIES(${MCONVERT_INCLUDE_DIRS})
ADD_DEFINITIONS(-g -Wall -Wextra -pedantic)
